# Ai-video--api

./: .env.example  .gitignore  COMPATIBILITY_INDEX.md  COMPRESSION_SEALING_COMPLETE.md  COMPRESSION_SEALING_SETUP.md  DELIVERABLES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPATIBILITY_READY.md  DEPLOYMENT_MANIFEST.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.geometry  FILE_INDEX.md  FINAL_DELIVERY_SUMMARY.md  GEOMETRY_IMPLEMENTATION.md  GEOMETRY_QUICK_START.md  H4MK_FORMAT.md  HARMONY4_MEDIA.md  HARMONYØ4_MATHEMATICAL_HUMANS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_SEALING_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.txt  MATHEMATICAL_HUMAN_SYSTEM.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QUICK_REFERENCE.md  QUICK_REFERENCE_CARD.md  QUICK_START.md  QUICK_START_API.md  QUICK_START_COMPAT.md  QUICK_START_MATH_HUMANS.md  README.md  SEALING_ARCHITECTURE.md  SEALING_CHECKLIST.md  SEALING_COMPLETE.md  SEALING_DEPLOYMENT_GUIDE.md  SEALING_IMPLEMENTATION_CHECKLIST.md  (+13 more)
adapters/: __init__.py  base.py  dsp.py  null.py
api/: __init__.py  acl.py  audio.py  audio_old.py  compress.py  deps.py  documentation.py  main.py  main_old.py  video.py  video_compat.py  video_old.py  video_range.py  video_tracks.py
cli/: __init__.py  compress.py  main.py  video_tools.py
compression/: __init__.py  api.py  attest.py  geo_ref.py  loader.py
config/: math_humans.env  nginx-viewer.conf  production.env.example
container/: __init__.py  chunks.py  geometry_container.py  h4mk.py  h4mk_tracks.py  multitrack.py  reader.py  seek.py
crypto/: __init__.py  living_bindings.py  living_cipher.py
db/: __init__.py  models.py  session.py
docs/: ARCHITECTURE.md  COMPATIBILITY_ARCHITECTURE.md  COMPRESSION_ARCHITECTURE.md  COMPRESSION_SEALING.md  CORE_ABI_SPEC.md  DEPLOYMENT_READY.md  FILE_INDEX.md  FINAL_SUMMARY.md  HARMONY4_UPGRADE.md  INTEGRATION_VIDEO_APP.md  RELEASE_NOTES_v1.0.0.md  REPO_STRUCTURE.md  STRUCTURAL_ETHICS.md  VIDEO_INTEGRATION.md  VIDEO_PORT.md
ethics/: __init__.py  constraints.py  guards.py  policy.py  report.py  state.py
examples/: build_and_decode.py  demo_harmony4_api.py
generators/: __init__.py
geometry/: __init__.py  figures.py  spec.py  temporal.py
harmony4_media/: __init__.py  cli.py
humans/: __init__.py  artistic_constraints.py  harm_monitoring.py  harm_prevention.py  harm_seals.py  math_primitives.py  non_injective.py
scripts/: backup.sh  bootstrap_admin.py  complete_migration.py  deploy_math_humans.sh  deploy_production.sh  export_video.sh  go_live_checklist.sh  (+7 more)
(+64 files in other folders)
